Change database table name and small bug fix.

--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -655,6 +655,10 @@ table {
     margin-right: 5px;
 }
 
+.attemptLogin_reset_text {
+    margin-bottom: 0;
+}
+
 #body_progress {
     display: block;
     height: 100%;
