--- a/symfony_fw/templates/render/index.html.twig
+++ b/symfony_fw/templates/render/index.html.twig
@@ -45,7 +45,7 @@
 {% block columnLeftContainer %}
     {% if (settingRow['website_active'] == true or is_granted("IS_AUTHENTICATED_FULLY") == true) and urlExtra != "maintenance_authentication" and app.request.get("error") is null and urlExtra != "user_login" %}
         <div class="sortable_column">
-            {% for key, value in response.modules.left %}
+            {% for key, value in response.module.left %}
                 {% if value.active == true %}
                     {{-render(controller("App\\Controller\\" ~ value.controller_name, {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
                 {% endif %}
@@ -66,7 +66,7 @@
             </div>
         {% elseif (settingRow['website_active'] == true or is_granted("IS_AUTHENTICATED_FULLY") == true) and urlExtra != "maintenance_authentication" %}
             <div class="sortable_column">
-                {% for key, value in response.modules.center %}
+                {% for key, value in response.module.center %}
                     {% if value.active == true %}
                         {{-render(controller("App\\Controller\\" ~ value.controller_name, {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
                     {% endif %}
@@ -87,7 +87,7 @@
 {% block columnRightContainer %}
     {% if (settingRow['website_active'] == true or is_granted("IS_AUTHENTICATED_FULLY") == true) and urlExtra != "maintenance_authentication" and app.request.get("error") is null and urlExtra != "user_login" %}
         <div class="sortable_column">
-            {% for key, value in response.modules.right %}
+            {% for key, value in response.module.right %}
                 {% if value.active == true %}
                     {{-render(controller("App\\Controller\\" ~ value.controller_name, {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
                 {% endif %}
