New logic for selected item.

--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -630,6 +630,9 @@ table {
     }
 }
 
+.download_detail_text {
+    display: inline-block;
+}
 .download_detail_container {
     display: none;
     border: 1px dotted #000000;
