--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -662,6 +662,12 @@ table {
     margin-bottom: 0;
 }
 
+.unit_test_howTo_example {
+    background-color: #c6c6c6;
+    border: 1px dotted #000000;
+    padding: 10px;
+}
+
 #body_progress {
     display: block;
     height: 100%;
@@ -776,11 +782,13 @@ table {
     }
 }
 
-#cp_microservice_deploy_render_result {
-    margin-top: 10px;
+#unit_test_code_row .mdc-text-field {
+    width: 100%;
 }
-#cp_microservice_deploy_ssh_connection_result {
-    margin-top: 20px;
+#form_microservice_unit_test_code {
+    width: 100%;
+    height: 500px;
+    overflow-y: scroll;
 }
 
 #form_pageComment {
@@ -811,6 +819,13 @@ table {
             }
         }
     }
+}
+
+#cp_microservice_deploy_render_result {
+    margin-top: 10px;
+}
+#cp_microservice_deploy_ssh_connection_result {
+    margin-top: 20px;
 }
 
 :root {
