Multi tab logic and small fix.

--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -185,7 +185,8 @@
                 'index_7': "{{"index_7"|trans}}",
                 'index_8': "{{"index_8"|trans}}",
                 'index_9': "{{"index_9"|trans}}",
-                'index_10': "{{"index_10"|trans}}"
+                'index_10': "{{"index_10"|trans}}",
+                'index_11': "{{"index_11"|trans}}"
             };
 
             var textWidgetDatePicker = {
