--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -86,6 +86,7 @@
         <script>
             var session = {
                 'token': "{{csrf_token("intention")}}",
+                'name': "{{php_session.name}}",
                 'userInform': "{{php_session.userInform}}",
                 'languageTextCode': "{{php_session.languageTextCode}}",
                 'currentPageId': "{{php_session.currentPageId}}"
