--- a/symfony_fw/templates/render/control_panel/setting.html.twig
+++ b/symfony_fw/templates/render/control_panel/setting.html.twig
@@ -98,6 +98,7 @@
             {{form_row(form.captcha)}}
             {{form_row(form.useType)}}
             {{form_row(form.secretPassphrase, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+            {{form_row(form.javascriptMinify)}}
         </div>
     </fieldset>
     <fieldset class="accordion_container">
