Rename javascript folder.

--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -203,35 +203,35 @@
             };
         </script>
         
-        <script src="{{asset("javascript/library/jquery_3.4.1.min.js")}}"></script>
-        <script src="{{asset("javascript/library/jquery-ui_1.12.1.min.js")}}"></script>
-        <script src="{{asset("javascript/library/jquery-mobile_1.5.0.min.js")}}"></script>
-        <script src="{{asset("javascript/library/material-components-web_custom.min.js")}}"></script>
+        <script src="{{asset("js/library/jquery_3.4.1.min.js")}}"></script>
+        <script src="{{asset("js/library/jquery-ui_1.12.1.min.js")}}"></script>
+        <script src="{{asset("js/library/jquery-mobile_1.5.0.min.js")}}"></script>
+        <script src="{{asset("js/library/material-components-web_custom.min.js")}}"></script>
 
-        <script src="{{asset("javascript/system/Utility" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/MaterialDesign" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/WidgetSearch" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/WidgetDatePicker" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/Ajax" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/Loader" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/FlashBag" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/PopupEasy" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/Search" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/TableAndPagination" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/Captcha" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/Upload" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/Language" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/Wysiwyg" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/Chaato" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/PageComment" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/Authentication" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/Registration" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/RecoverPassword" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/MenuUser" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Utility" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/MaterialDesign" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/WidgetSearch" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/WidgetDatePicker" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Ajax" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Loader" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/FlashBag" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/PopupEasy" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Search" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/TableAndPagination" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Captcha" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Upload" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Language" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Wysiwyg" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Chaato" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/PageComment" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Authentication" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Registration" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/RecoverPassword" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/MenuUser" ~ javascriptMinify)}}"></script>
         
         {{-include("@templateRoot/layout/layout_site_custom_bottom.html.twig")-}}
         
-        <script src="{{asset("javascript/system/Index" ~ javascriptMinify)}}"></script>
-        <script src="{{asset("javascript/system/Index_custom" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Index" ~ javascriptMinify)}}"></script>
+        <script src="{{asset("js/system/Index_custom" ~ javascriptMinify)}}"></script>
     </body>
 </html>
